task-4: Implement DB connections, add API routes
